--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -6,17 +6,17 @@ quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 #
 # OpenTelemetry
 #
-quarkus.application.name=camel-quarkus-kafka-api-producer
+quarkus.application.name=camel-quarkus-kafka-consumer
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
 quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
 quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSECURE:true}    
 #
 # Swagger
 #
-quarkus.swagger-ui.enable=true
-quarkus.swagger-ui.always-include=true
-quarkus.swagger-ui.path=/api
-quarkus.http.non-application-root-path=/
+#quarkus.swagger-ui.enable=true
+#quarkus.swagger-ui.always-include=true
+#quarkus.swagger-ui.path=/api
+#quarkus.http.non-application-root-path=/
 #quarkus.smallrye-openapi.path=/openapi
 #
 # Openshift
