--- a/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
@@ -7,8 +7,8 @@ quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 # OpenTelemetry
 #
 quarkus.application.name=camel-quarkus-kafka-api-producer
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
-quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
+quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
 quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSECURE:true}    
 #
 # Swagger
