first version of doc

--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:my-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 #
 # OpenTelemetry
 #
 quarkus.application.name=camel-quarkus-kafka-consumer
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
-quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-all-in-one-inmemory-collector.kafka.svc.cluster.local:4317}
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-plataform.svc.cluster.local:4317}
+quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-plataform.svc.cluster.local:4317}
 quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSECURE:true}    
 #
 # Swagger
