--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -8,8 +8,8 @@ quarkus.openshift.env.vars.kafka-group-id=${KAFKA_GROUP_ID:camel-quarkus-kafka-c
 # OpenTelemetry
 #
 quarkus.application.name=camel-quarkus-kafka-consumer
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-plataform.svc.cluster.local:4317}
-quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-plataform.svc.cluster.local:4317}
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-system.svc.cluster.local:4317}
+quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-system.svc.cluster.local:4317}
 quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSECURE:true}    
 #
 # Swagger
@@ -23,6 +23,6 @@ quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSE
 # Openshift
 #
 quarkus.kubernetes-client.trust-certs=true
-quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
+quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-17
 quarkus.openshift.route.expose=true
 quarkus.openshift.deploy=true
