--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies-3.19.0/dependencies/*.jar"
+        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies-3.19.0/dependencies/*.jar",
+        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies-3.20.1/dependencies/*.jar",
+        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies/*.jar"
     ],
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "disabled"
