--- a/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-2v2kt.2v2kt.sandbox322.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
+kafka.security.protocol=SSL
+kafka.ssl.truststore.location=classpath:truststore.jks
+kafka.ssl.truststore.password=redhat
 #
 # OpenTelemetry
 #
 quarkus.application.name=camel-quarkus-kafka-api-producer
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-plataform.svc.cluster.local:4317}
-quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-plataform.svc.cluster.local:4317}
+quarkus.otel.exporter.otlp.traces.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-system.svc.cluster.local:4317}
+quarkus.openshift.env.vars.otel-exporter-otlp-endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://jaeger-production-collector.tracing-system.svc.cluster.local:4317}
 quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSECURE:true} 
 #
 # Swagger
@@ -22,6 +25,6 @@ quarkus.http.non-application-root-path=/
 # Openshift
 #
 quarkus.kubernetes-client.trust-certs=true
-quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
+quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-17
 quarkus.openshift.route.expose=true
 quarkus.openshift.deploy=true
