--- a/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-2v2kt.2v2kt.sandbox322.opentlc.com:443}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-r9z76.r9z76.sandbox596.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
-kafka.security.protocol=SSL
-kafka.ssl.truststore.location=classpath:truststore.jks
-kafka.ssl.truststore.password=redhat
+#kafka.security.protocol=SSL
+#kafka.ssl.truststore.location=classpath:/truststore.jks
+#kafka.ssl.truststore.password=redhat
 #
 # OpenTelemetry
 #
@@ -25,6 +25,6 @@ quarkus.http.non-application-root-path=/
 # Openshift
 #
 quarkus.kubernetes-client.trust-certs=true
-quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-17
+quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi9/openjdk-17
 quarkus.openshift.route.expose=true
 quarkus.openshift.deploy=true
