--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-r9z76.r9z76.sandbox596.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 quarkus.openshift.env.vars.kafka-group-id=${KAFKA_GROUP_ID:camel-quarkus-kafka-consumer}
 #
@@ -23,6 +23,6 @@ quarkus.openshift.env.vars.otel-exporter-otlp-insecure=${OTEL_EXPORTER_OTLP_INSE
 # Openshift
 #
 quarkus.kubernetes-client.trust-certs=true
-quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-17
+quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi9/openjdk-17
 quarkus.openshift.route.expose=true
 quarkus.openshift.deploy=true
