--- a/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
@@ -3,9 +3,19 @@
 #
 quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-r9z76.r9z76.sandbox596.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
-#kafka.security.protocol=SSL
-#kafka.ssl.truststore.location=classpath:/truststore.jks
-#kafka.ssl.truststore.password=redhat
+quarkus.openshift.env.vars.kafka-producer-compression-codec=${KAFKA_PRODUCER_COMPRESSION_CODEC:none}
+quarkus.openshift.env.vars.kafka-producer-required-acks=${KAFKA_PRODUCER_REQUIRED_ACKS:0}
+quarkus.openshift.env.vars.kafka-producer-buffer-memory-size=${KAFKA_PRODUCER_BUFFER_MEMORY_SIZE:63554432}
+quarkus.openshift.env.vars.kafka-producer-linger-ms=${KAFKA_PRODUCER_LINGER_MS:1}
+quarkus.openshift.env.vars.kafka-producer-batch-size=${KAFKA_PRODUCER_BATCH_SIZE:16384}
+quarkus.openshift.env.vars.kafka-producer-security-protocol=${KAFKA_PRODUCER_SECURITY_PROTOCOL:SASL_SSL}
+quarkus.openshift.env.vars.kafka-producer-ssl-truststore-location=${KAFKA_PRODUCER_TRUSTSTORE_LOCATION:/etc/security/truststore/truststore.jks}
+quarkus.openshift.env.vars.kafka-producer-ssl-truststore-password=${KAFKA_PRODUCER_TRUSTSTORE_PASSWORD:redhat}
+quarkus.openshift.env.vars.kafka-producer-sasl-mechanism=${KAFKA_PRODUCER_SASL_MECHANISM:SCRAM-SHA-512}
+quarkus.openshift.env.vars.kafka-producer-sasl-jaas-config=${KAFKA_PRODUCER_JAAS_CONFIG:org.apache.kafka.common.security.scram.ScramLoginModule required username=redhat-user password=redhat123;}
+quarkus.openshift.config-map-volumes.truststore-config-map.config-map-name=truststore-config
+quarkus.openshift.config-map-volumes.truststore-config-map.default-mode=420
+quarkus.openshift.mounts.truststore-config-map.path=/etc/security/truststore
 #
 # OpenTelemetry
 #
@@ -24,6 +34,7 @@ quarkus.http.non-application-root-path=/
 #
 # Openshift
 #
+#quarkus.kubernetes.deployment-target=kubernetes
 quarkus.kubernetes-client.trust-certs=true
 quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi9/openjdk-17
 quarkus.openshift.route.expose=true
