--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -4,6 +4,19 @@
 quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-r9z76.r9z76.sandbox596.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 quarkus.openshift.env.vars.kafka-group-id=${KAFKA_GROUP_ID:camel-quarkus-kafka-consumer}
+quarkus.openshift.env.vars.kafka-consumer-max-poll-records=${KAFKA_CONSUMER_MAX_POLL_RECORDS:500}
+quarkus.openshift.env.vars.kafka-consumer-auto-commit-enable=${KAFKA_CONSUMER_AUTO_COMMIT_ENABLE:true}
+quarkus.openshift.env.vars.kafka-consumer-fetch-min-bytes=${KAFKA_CONSUMER_FETCH_MIN_BYTES:1024}
+quarkus.openshift.env.vars.kafka-consumer-fetch-wait-max-ms=${KAFKA_CONSUMER_FETCH_WAIT_MAX_MS:0}
+quarkus.openshift.env.vars.kafka-consumer-fetch-max-bytes=${KAFKA_CONSUMER_FETCH_MAX_BYTES:26214400}
+quarkus.openshift.env.vars.kafka-consumer-security-protocol=${KAFKA_CONSUMER_SECURITY_PROTOCOL:SASL_SSL}
+quarkus.openshift.env.vars.kafka-consumer-ssl-truststore-location=${KAFKA_CONSUMER_TRUSTSTORE_LOCATION:/etc/security/truststore/truststore.jks}
+quarkus.openshift.env.vars.kafka-consumer-ssl-truststore-password=${KAFKA_CONSUMER_TRUSTSTORE_PASSWORD:redhat}
+quarkus.openshift.env.vars.kafka-consumer-sasl-mechanism=${KAFKA_CONSUMER_SASL_MECHANISM:SCRAM-SHA-512}
+quarkus.openshift.env.vars.kafka-consumer-sasl-jaas-config=${KAFKA_CONSUMER_JAAS_CONFIG:org.apache.kafka.common.security.scram.ScramLoginModule required username=redhat-user password=redhat123;}
+quarkus.openshift.config-map-volumes.truststore-config-map.config-map-name=truststore-config
+quarkus.openshift.config-map-volumes.truststore-config-map.default-mode=420
+quarkus.openshift.mounts.truststore-config-map.path=/etc/security/truststore
 #
 # OpenTelemetry
 #
