added secret configuration

--- a/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-r9z76.r9z76.sandbox596.opentlc.com:443}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-pwsr7.pwsr7.sandbox2218.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 quarkus.openshift.env.vars.kafka-producer-compression-codec=${KAFKA_PRODUCER_COMPRESSION_CODEC:none}
 quarkus.openshift.env.vars.kafka-producer-required-acks=${KAFKA_PRODUCER_REQUIRED_ACKS:0}
@@ -13,9 +13,9 @@ quarkus.openshift.env.vars.kafka-producer-ssl-truststore-location=${KAFKA_PRODUC
 quarkus.openshift.env.vars.kafka-producer-ssl-truststore-password=${KAFKA_PRODUCER_TRUSTSTORE_PASSWORD:redhat}
 quarkus.openshift.env.vars.kafka-producer-sasl-mechanism=${KAFKA_PRODUCER_SASL_MECHANISM:SCRAM-SHA-512}
 quarkus.openshift.env.vars.kafka-producer-sasl-jaas-config=${KAFKA_PRODUCER_JAAS_CONFIG:org.apache.kafka.common.security.scram.ScramLoginModule required username=redhat-user password=redhat123;}
-quarkus.openshift.config-map-volumes.truststore-config-map.config-map-name=truststore-config
-quarkus.openshift.config-map-volumes.truststore-config-map.default-mode=420
-quarkus.openshift.mounts.truststore-config-map.path=/etc/security/truststore
+quarkus.openshift.secret-volumes.truststore-secret.secret-name=truststore-secret
+quarkus.openshift.secret-volumes.truststore-secret.default-mode=420
+quarkus.openshift.mounts.truststore-secret.path=/etc/security/truststore
 #
 # OpenTelemetry
 #
