Best configs for tests

--- a/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api-producer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-pwsr7.pwsr7.sandbox2218.opentlc.com:443}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-pz5k8.pz5k8.sandbox421.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 quarkus.openshift.env.vars.kafka-producer-compression-codec=${KAFKA_PRODUCER_COMPRESSION_CODEC:none}
 quarkus.openshift.env.vars.kafka-producer-required-acks=${KAFKA_PRODUCER_REQUIRED_ACKS:0}
