--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #
 # Kafka Configuration
 #
-quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-pwsr7.pwsr7.sandbox2218.opentlc.com:443}
+quarkus.openshift.env.vars.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka-cluster-kafka-bootstrap-kafka.apps.cluster-pz5k8.pz5k8.sandbox421.opentlc.com:443}
 quarkus.openshift.env.vars.kafka-topic=${KAFKA_TOPIC:events}
 quarkus.openshift.env.vars.kafka-group-id=${KAFKA_GROUP_ID:camel-quarkus-kafka-consumer}
-quarkus.openshift.env.vars.kafka-consumer-max-poll-records=${KAFKA_CONSUMER_MAX_POLL_RECORDS:500}
+quarkus.openshift.env.vars.kafka-consumer-max-poll-records=${KAFKA_CONSUMER_MAX_POLL_RECORDS:100000}
 quarkus.openshift.env.vars.kafka-consumer-auto-commit-enable=${KAFKA_CONSUMER_AUTO_COMMIT_ENABLE:true}
 quarkus.openshift.env.vars.kafka-consumer-fetch-min-bytes=${KAFKA_CONSUMER_FETCH_MIN_BYTES:1024}
-quarkus.openshift.env.vars.kafka-consumer-fetch-wait-max-ms=${KAFKA_CONSUMER_FETCH_WAIT_MAX_MS:0}
+quarkus.openshift.env.vars.kafka-consumer-fetch-wait-max-ms=${KAFKA_CONSUMER_FETCH_WAIT_MAX_MS:1}
 quarkus.openshift.env.vars.kafka-consumer-fetch-max-bytes=${KAFKA_CONSUMER_FETCH_MAX_BYTES:26214400}
 quarkus.openshift.env.vars.kafka-consumer-security-protocol=${KAFKA_CONSUMER_SECURITY_PROTOCOL:SASL_SSL}
 quarkus.openshift.env.vars.kafka-consumer-ssl-truststore-location=${KAFKA_CONSUMER_TRUSTSTORE_LOCATION:/etc/security/truststore/truststore.jks}
