Config added for applications

--- a/custom-resources/kafka/kafka-cr.yaml
+++ b/custom-resources/kafka/kafka-cr.yaml
@@ -17,7 +17,7 @@ spec:
         memory: 6Gi
     config:
       default.replication.factor: 3
-      inter.broker.protocol.version: '3.6'
+      inter.broker.protocol.version: '3.7'
       min.insync.replicas: 2
       offsets.topic.replication.factor: 3
       transaction.state.log.min.isr: 2
@@ -41,12 +41,12 @@ spec:
           type: scram-sha-512
     jvmOptions:
       '-XX':
-        InitiatingHeapOccupancyPercent: 45
-        MaxGCPauseMillis: 200
-        UseG1GC: true
-        UseStringDeduplication: true
-      '-Xms': 4g
-      '-Xmx': 4g
+        InitiatingHeapOccupancyPercent: "45"
+        MaxGCPauseMillis: "200"
+        UseG1GC: "true"
+        UseStringDeduplication: "true"
+      '-Xms': 6g
+      '-Xmx': 6g
       gcLoggingEnabled: true
     metricsConfig:
       type: jmxPrometheusExporter
@@ -54,13 +54,13 @@ spec:
         configMapKeyRef:
           key: kafka-metrics-config.yml
           name: kafka-metrics
-    replicas: 6
+    replicas: 3
     storage:
       class: gp3-csi
       deleteClaim: true
       size: 20Gi
       type: persistent-claim
-    version: 3.6.0
+    version: 3.7.0
   kafkaExporter:
     groupRegex: ".*"
     topicRegex: ".*"
