--- a/custom-resources/kafka/kafka-user-password.yaml
+++ b/custom-resources/kafka/kafka-user-password.yaml
@@ -2,6 +2,6 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: kafka-user-password
-  namespace: kafka
+  namespace: <YOUR USER>
 data:
   kafka-user-password: cmVkaGF0MTIz
