--- a/custom-resources/kafka-exporter/prometheus.yaml
+++ b/custom-resources/kafka-exporter/prometheus.yaml
@@ -43,7 +43,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: prometheus-server
-    namespace: kafka
+    namespace: <YOUR USER>
 
 ---
 apiVersion: monitoring.coreos.com/v1
@@ -69,7 +69,7 @@ spec:
       app: strimzi
   alerting:
     alertmanagers:
-    - namespace: kafka
+    - namespace: <YOUR USER>
       name: alertmanager
       port: alertmanager
   additionalScrapeConfigs:
