--- a/custom-resources/kafka-exporter/strimzi-pod-monitor.yaml
+++ b/custom-resources/kafka-exporter/strimzi-pod-monitor.yaml
@@ -10,7 +10,7 @@ spec:
       strimzi.io/kind: cluster-operator
   namespaceSelector:
     matchNames:
-      - kafka
+      - <YOUR USER>
   podMetricsEndpoints:
   - path: /metrics
     port: http
@@ -27,7 +27,7 @@ spec:
       app.kubernetes.io/name: entity-operator
   namespaceSelector:
     matchNames:
-      - kafka
+      - <YOUR USER>
   podMetricsEndpoints:
   - path: /metrics
     port: healthcheck
@@ -44,7 +44,7 @@ spec:
       strimzi.io/kind: KafkaBridge
   namespaceSelector:
     matchNames:
-      - kafka
+      - <YOUR USER>
   podMetricsEndpoints:
   - path: /metrics
     port: rest-api
@@ -63,7 +63,7 @@ spec:
         values: ["Kafka", "KafkaConnect", "KafkaMirrorMaker", "KafkaMirrorMaker2"]
   namespaceSelector:
     matchNames:
-      - kafka
+      - <YOUR USER>
   podMetricsEndpoints:
   - path: /metrics
     port: tcp-prometheus
