--- a/custom-resources/kafka/kafka-user.yaml
+++ b/custom-resources/kafka/kafka-user.yaml
@@ -3,8 +3,8 @@ kind: KafkaUser
 metadata:
   labels:
     strimzi.io/cluster: kafka-cluster
-  name: redhat-user
-  namespace: kafka
+  name: userX
+  namespace: <YOUR USER>
 spec:
   authentication:
     password:
